fix: deprecated description, stream tolist